--- a/source/index.njk
+++ b/source/index.njk
@@ -23,23 +23,28 @@
             </div>
         </header>
 
-        <!-- <section class="Section Hero l-Wrapper l-LeftTwoThirds">
-            <img class="Avatar" src="static/images/avatar.jpg" alt="Arnelle Balane">
+        <section class="Section Hero u-Clearfix">
+            <div class="l-Wrapper">
+                <img class="Avatar" src="static/images/avatar.jpg" alt="Arnelle Balane">
 
-            <h2 class="Hero__Title">Web Developer from <strong>Cebu, Philippines</strong></h2>
+                <div>
+                    <h2 class="Hero__Title">Web Developer from <strong>Cebu, Philippines</strong></h2>
 
-            <p>I love experimenting with and sharing about cool new Web technologies and techniques.</p>
-            <p>I'm <strong>@arnellebalane</strong> on
-                <span class="SocialIcons">
-                    {% externalLink 'Github', 'https://github.com/arnellebalane', ['SocialIcon', 'SocialIcon--github'] %}
-                    {% externalLink 'Twitter', 'https://twitter.com/arnellebalane', ['SocialIcon', 'SocialIcon--twitter'] %}
-                    {% externalLink 'Dev.to', 'https://dev.to/arnellebalane', ['SocialIcon', 'SocialIcon--devto'] %}
-                    {% externalLink 'Instagram', 'https://instagram.com/arnellebalane', ['SocialIcon', 'SocialIcon--instagram'] %}
-                    {% externalLink 'LinkedIn', 'https://linkedin.com/in/arnellebalane', ['SocialIcon', 'SocialIcon--linkedin'] %}
-                </span>
-            </p>
+                    <p>I love experimenting with and sharing about cool new Web technologies and techniques.</p>
+                    <p>I'm <strong>@arnellebalane</strong> on
+                        <span class="SocialIcons">
+                            {% externalLink 'Github', 'https://github.com/arnellebalane', ['SocialIcon', 'SocialIcon--github'] %}
+                            {% externalLink 'Twitter', 'https://twitter.com/arnellebalane', ['SocialIcon', 'SocialIcon--twitter'] %}
+                            {% externalLink 'Dev.to', 'https://dev.to/arnellebalane', ['SocialIcon', 'SocialIcon--devto'] %}
+                            {% externalLink 'Instagram', 'https://instagram.com/arnellebalane', ['SocialIcon', 'SocialIcon--instagram'] %}
+                            {% externalLink 'LinkedIn', 'https://linkedin.com/in/arnellebalane', ['SocialIcon', 'SocialIcon--linkedin'] %}
+                        </span>
+                    </p>
+                </div>
+            </div>
         </section>
 
+        <!--
         <section class="Section About l-Wrapper l-LeftTwoThirds">
             <h1 class="Section__Title">About</h1>
 
