Make About section responsive

--- a/source/index.njk
+++ b/source/index.njk
@@ -28,7 +28,7 @@
                 <img class="Avatar" src="static/images/avatar.jpg" alt="Arnelle Balane">
 
                 <div>
-                    <h2 class="Hero__Title">Web Developer from <strong>Cebu, Philippines</strong></h2>
+                    <h2 class="Section__Title Hero__Title">Web Developer from <strong>Cebu, Philippines</strong></h2>
 
                     <p>I love experimenting with and sharing about cool new Web technologies and techniques.</p>
                     <p>I'm <strong>@arnellebalane</strong> on
@@ -44,23 +44,25 @@
             </div>
         </section>
 
-        <!--
-        <section class="Section About l-Wrapper l-LeftTwoThirds">
-            <h1 class="Section__Title">About</h1>
+        <section class="Section About">
+            <div class="l-Wrapper l-LeftTwoThirds">
+                <h1 class="Section__Title">About</h1>
 
-            <p>
-                I’m currently a Software Developer at {% externalLink 'Newlogic', 'https://newlogic.io/' %}. Previously, I was the
-                Lead Frontend Developer at {% externalLink 'Channelfix', 'https://channelfix.com' %}. I also used to teach a
-                Web Engineering class at the University of the Philippines Cebu as a part-time lecturer.
-            </p>
+                <p>
+                    I’m currently a Software Developer at {% externalLink 'Newlogic', 'https://newlogic.io/' %}. Previously, I was the
+                    Lead Frontend Developer at {% externalLink 'Channelfix', 'https://channelfix.com' %}. I also used to teach a
+                    Web Engineering class at the University of the Philippines Cebu as a part-time lecturer.
+                </p>
 
-            <p>
-                On weekends, I’m a co-organizer for {% externalLink 'Google Developers Group Cebu', 'https://gdgcebu.org' %},
-                a small team that sets up tech events around the Visayas region. You’ll often find me giving talks and workshops at
-                those and other community events.
-            </p>
+                <p>
+                    On weekends, I’m a co-organizer for {% externalLink 'Google Developers Group Cebu', 'https://gdgcebu.org' %},
+                    a small team that sets up tech events around the Visayas region. You’ll often find me giving talks and workshops at
+                    those and other community events.
+                </p>
+            </div>
         </section>
 
+        <!--
         <section class="Section TalksAndWorkshops l-Wrapper l-RightTwoThirds u-Clearfix">
             <img src="static/images/speaking.jpg" alt="Arnelle Balane">
 
