--- a/source/index.njk
+++ b/source/index.njk
@@ -80,8 +80,8 @@
 
                     {%- for event in events %}
                         <article class="Event">
-                            <h1 class="Event__Title">{% externalLink event.name, event.url %}</h1>
-                            <h2 class="Event__Subtitle">{{ event.description }}</h2>
+                            <h3 class="Event__Title">{% externalLink event.name, event.url %}</h1>
+                            <h4 class="Event__Subtitle">{{ event.description }}</h2>
 
                             <time class="Event__Date" datetime="2019-05-11">{{ event.date }}</time>
                             <data class="Event__Venue">{{ event.venue }}</data>
@@ -93,28 +93,30 @@
             </div>
         </section>
 
-        <!--
-        <section class="Section Technology l-Wrapper l-LeftTwoThirds">
-            <h1 class="Section__Title">Technology</h1>
+        <section class="Section Technology">
+            <div class="l-Wrapper l-LeftTwoThirds">
+                <h1 class="Section__Title">Technology</h1>
 
-            <p>Here are some of the technologies that I have experience using on my projects, both professional and personal ones:</p>
+                <p>Here are some of the technologies that I have experience using on my projects, both professional and personal ones:</p>
 
-            <ul class="TechnologyList">
-                <li class="TechnologyList__Item"><img src="static/images/icons/html5.png" alt="HTML5"></li>
-                <li class="TechnologyList__Item"><img src="static/images/icons/css3.png" alt="CSS3"></li>
-                <li class="TechnologyList__Item"><img src="static/images/icons/javascript.png" alt="JavaScript"></li>
-                <li class="TechnologyList__Item"><img src="static/images/icons/vue.png" alt="VueJS"></li>
-                <li class="TechnologyList__Item"><img src="static/images/icons/firebase.png" alt="Firebase"></li>
-                <li class="TechnologyList__Item"><img src="static/images/icons/nodejs.png" alt="NodeJS"></li>
-                <li class="TechnologyList__Item"><img src="static/images/icons/pwa.png" alt="Progressive Web Apps"></li>
-                <li class="TechnologyList__Item"><img src="static/images/icons/sass.png" alt="SASS"></li>
-                <li class="TechnologyList__Item"><img src="static/images/icons/django.png" alt="Django"></li>
-                <li class="TechnologyList__Item"><img src="static/images/icons/electron.png" alt="Electron"></li>
-                <li class="TechnologyList__Item"><img src="static/images/icons/react.png" alt="ReactJS"></li>
-                <li class="TechnologyList__Item"><img src="static/images/icons/netlify.png" alt="Netlify"></li>
-            </ul>
+                <ul class="TechnologyList">
+                    <li class="TechnologyList__Item"><img src="static/images/icons/html5.png" alt="HTML5"></li>
+                    <li class="TechnologyList__Item"><img src="static/images/icons/css3.png" alt="CSS3"></li>
+                    <li class="TechnologyList__Item"><img src="static/images/icons/javascript.png" alt="JavaScript"></li>
+                    <li class="TechnologyList__Item"><img src="static/images/icons/vue.png" alt="VueJS"></li>
+                    <li class="TechnologyList__Item"><img src="static/images/icons/firebase.png" alt="Firebase"></li>
+                    <li class="TechnologyList__Item"><img src="static/images/icons/nodejs.png" alt="NodeJS"></li>
+                    <li class="TechnologyList__Item"><img src="static/images/icons/pwa.png" alt="Progressive Web Apps"></li>
+                    <li class="TechnologyList__Item"><img src="static/images/icons/sass.png" alt="SASS"></li>
+                    <li class="TechnologyList__Item"><img src="static/images/icons/django.png" alt="Django"></li>
+                    <li class="TechnologyList__Item"><img src="static/images/icons/electron.png" alt="Electron"></li>
+                    <li class="TechnologyList__Item"><img src="static/images/icons/react.png" alt="ReactJS"></li>
+                    <li class="TechnologyList__Item"><img src="static/images/icons/netlify.png" alt="Netlify"></li>
+                </ul>
+            </div>
         </section>
 
+        <!--
         <section class="Section GetInTouch l-Wrapper l-LeftTwoThirds">
             <h1 class="Section__Title">Get In Touch</h1>
 
