--- a/source/index.njk
+++ b/source/index.njk
@@ -116,14 +116,16 @@
             </div>
         </section>
 
-        <!--
-        <section class="Section GetInTouch l-Wrapper l-LeftTwoThirds">
-            <h1 class="Section__Title">Get In Touch</h1>
+        <section class="Section GetInTouch">
+            <div class="l-Wrapper l-LeftTwoThirds">
+                <h1 class="Section__Title">Get In Touch</h1>
 
-            <p>Feel free to <a href="mailto:arnellebalane@gmail.com">send me an email</a> or reach me through social media and let’s make the Web more awesome!</p>
-            <p>Have a great day!</p>
+                <p>Feel free to <a href="mailto:arnellebalane@gmail.com">send me an email</a> or reach me through social media and let’s make the Web more awesome!</p>
+                <p>Have a great day!</p>
+            </div>
         </section>
 
+        <!--
         <footer class="Footer l-Wrapper">
             <p class="Footer__Copyright">&copy; 2019 Arnelle Balane. All Rights Reserved.</p>
             <small class="Footer__BuiltWith">
