Make Footer section responsive

--- a/source/index.njk
+++ b/source/index.njk
@@ -125,13 +125,14 @@
             </div>
         </section>
 
-        <!--
-        <footer class="Footer l-Wrapper">
-            <p class="Footer__Copyright">&copy; 2019 Arnelle Balane. All Rights Reserved.</p>
-            <small class="Footer__BuiltWith">
-                This site is built with {% externalLink 'Eleventy', 'https://www.11ty.io/' %} and hosted on {% externalLink 'Netlify', 'https://www.netlify.com/' %}.<br>
-                The source code is hosted on {% externalLink 'Github', 'https://github.com/' %}.
-            </small>
-        </footer> -->
+        <footer class="Footer">
+            <div class="l-Wrapper">
+                <p class="Footer__Copyright">&copy; 2019 Arnelle Balane. All Rights Reserved.</p>
+                <small class="Footer__BuiltWith">
+                    This site is built with {% externalLink 'Eleventy', 'https://www.11ty.io/' %} and hosted on {% externalLink 'Netlify', 'https://www.netlify.com/' %}.<br>
+                    The source code is hosted on {% externalLink 'Github', 'https://github.com/' %}.
+                </small>
+            </div>
+        </footer>
     </body>
 </html>
