Change Footer section layout

--- a/source/index.njk
+++ b/source/index.njk
@@ -30,7 +30,7 @@
                 <div>
                     <h2 class="Section__Title Hero__Title">Web Developer from <strong>Cebu, Philippines</strong></h2>
 
-                    <p>I love experimenting with and sharing about cool new Web technologies and techniques.</p>
+                    <p class="l-LeftTwoThirds">I love experimenting with and sharing about cool new Web technologies and techniques.</p>
                     <p>I'm <strong>@arnellebalane</strong> on
                         <span class="SocialIcons">
                             {% externalLink 'Github', 'https://github.com/arnellebalane', ['SocialIcon', 'SocialIcon--github'] %}
