--- a/source/index.njk
+++ b/source/index.njk
@@ -1,8 +1,7 @@
 ---
 layout: layouts/main.njk
-title: Arnelle Balane
 stylesheets:
-    - static/stylesheets/home.css
+    - /static/stylesheets/home.css
 ---
 
 <section class="Section Hero u-Clearfix">
