--- a/source/static/stylesheets/main.css
+++ b/source/static/stylesheets/main.css
@@ -107,10 +107,16 @@ a {
 
 .Header {
     --header-height: 7rem;
+    --header-logo-size: 3.2rem;
     --topbar-height: 2rem;
 
     height: calc(var(--topbar-height) + var(--header-height));
     padding-top: var(--topbar-height);
+    margin-bottom: 5rem;
+}
+
+.Header--home {
+    margin-bottom: 0;
 }
 
 .Header::before {
@@ -123,25 +129,47 @@ a {
     background: url("../images/dot.png") repeat;
 }
 
-.Header .l-Wrapper {
+.Header .l-Wrapper,
+.SiteLink {
     display: flex;
-    justify-content: space-between;
     align-items: center;
     height: 100%;
+}
+
+.SiteLogo {
+    display: block;
+    width: var(--header-logo-size);
+    height: var(--header-logo-size);
+    border-radius: 50%;
+    margin-right: 1.2rem;
 }
 
 .SiteName {
     font-size: 2.4rem;
     font-weight: 900;
+    color: var(--gray-400);
+}
+
+.SiteName--home {
+    color: var(--gray-100);
 }
 
 @media (min-width: 600px) {
     .Header {
         --header-height: calc(0.177 * 100vw - 50.12px); /* CSS Lock */
+        --header-logo-size: calc(0.024 * 100vw + 21.71px); /* CSS Lock, 32px -> 50px */
         --topbar-height: 3rem;
     }
 
+    .SiteLogo {
+        margin-right: 2.4rem;
+    }
+
     .SiteName {
+        font-size: calc(0.02 * 100vw + 11.76px); /* CSS Lock, 24px -> 36px */
+    }
+
+    .SiteName--home {
         font-size: calc(0.041 * 100vw - 0.49px); /* CSS Lock */
     }
 }
@@ -149,9 +177,14 @@ a {
 @media (min-width: 1188px) {
     .Header {
         --header-height: 16rem;
+        --header-logo-size: 5rem;
     }
 
     .SiteName {
+        font-size: 3.6rem;
+    }
+
+    .SiteName--home {
         font-size: 4.8rem;
     }
 }
@@ -160,18 +193,35 @@ a {
 
 /* NAVIGATION MENU */
 
-.Navigation__Item {
-    margin-left: 4rem;
+.Navigation {
+    display: none;
+    margin-left: auto;
+}
 
+.Navigation__Item {
     font-size: 1.8rem;
     font-weight: 900;
     text-transform: uppercase;
     color: var(--gray-400);
 }
 
-@media (max-width: 599px) {
+.Navigation__Item:not(:first-child) {
+    margin-left: 2rem;
+}
+
+@media (min-width: 600px) {
     .Navigation {
-        display: none;
+        display: block;
+    }
+
+    .Navigation__Item:not(:first-child) {
+        margin-left: calc(0.034 * 100vw - 0.41px); /* CSS Lock, 20px -> 40px */
+    }
+}
+
+@media (min-width: 1188px) {
+    .Navigation__Item:not(:first-child) {
+        margin-left: 4rem;
     }
 }
 
