--- a/source/events.njk
+++ b/source/events.njk
@@ -5,6 +5,9 @@ stylesheets:
     - /static/stylesheets/events.css
 ---
 
-<div class="l-Wrapper">
-    <h1>Events</h1>
+<div class="l-Wrapper l-LeftTwoThirds">
+    <p class="PageDescription">
+        Below is a list of my past and upcoming talks and workshops. If you'd like to invite me to give a talk or conduct
+        a workshop at your event, please feel free to <a href="mailto:arnellebalane@gmail.com">get in touch</a>.
+    </p>
 </div>
