Make page's Content area grow to occupy available height

--- a/source/_includes/layouts/main.njk
+++ b/source/_includes/layouts/main.njk
@@ -34,7 +34,9 @@
             </div>
         </header>
 
-        {{ content | safe }}
+        <main class="Content">
+            {{ content | safe }}
+        </main>
 
         <footer class="Footer">
             <div class="l-Wrapper">
